// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SoundCloud Track Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-0 eiisaqe0"
  >
    <div
      class="css-zqjcpl eiisaqe1"
      style="width: auto; height: auto;"
    />
  </div>
</DocumentFragment>
`;

exports[`SoundCloud Track Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-0 eiisaqe0"
  >
    <div
      class="css-zqjcpl eiisaqe1"
      style="width: auto; height: auto;"
    >
      <iframe
        allow="autoplay"
        frameborder="0"
        src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F744469711"
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
